@@ -73,14 +73,22 @@ public interface Channelizer extends ChannelHandler {
     /**
      * Create a message for the driver to use as a "keep-alive" for the connection. This method will only be used if
      * {@link #supportsKeepAlive()} is {@code true}.
+     *
+     * @deprecated As of release 3.4.9, not directly replaced. Any keep-alive functionality should be implemented as
+     * a function of the configured channel and not as a component of the {@code Channelizer} itself.
      */
+    @Deprecated
     public default Object createKeepAliveMessage() {
         return null;
     }
 
     /**
      * Determines if the channelizer supports a method for keeping the connection to the server alive.
+     *
+     * @deprecated As of release 3.4.9, not directly replaced. Any keep-alive functionality should be implemented as
+     * a function of the configured channel and not as a component of the {@code Channelizer} itself.
      */
+    @Deprecated
     public default boolean supportsKeepAlive() {
         return false;
     }
@@ -170,16 +178,20 @@ public interface Channelizer extends ChannelHandler {
          * Keep-alive is supported through the ping/pong websocket protocol.
          *
          * @see <a href=https://tools.ietf.org/html/rfc6455#section-5.5.2>IETF RFC 6455</a>
+         * @deprecated As of release 3.4.9, not directly replaced. The keep-alive functionality is delegated to Netty
+         * {@code IdleStateHandler} which is added to the pipeline in {@link Channelizer}.
          */
+        @Deprecated
         @Override
         public boolean supportsKeepAlive() {
             return true;
         }
 
         /**
-         * @deprecated As of release 3.5.0, not directly replaced. The keep-alive functionality is delegated to Netty
-         * {@link io.netty.handler.timeout.IdleStateHandler} which is added to the pipeline in {@link Channelizer}.
+         * @deprecated As of release 3.4.9, not directly replaced. The keep-alive functionality is delegated to Netty
+         * {@code IdleStateHandler} which is added to the pipeline in {@link Channelizer}.
          */
+        @Deprecated
         @Override
         public Object createKeepAliveMessage() {
             throw new UnsupportedOperationException(
