@@ -42,6 +42,7 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 * Added `Traversal.getTraverserSetSupplier()` to allow providers to supply their own `TraverserSet` instances.
 * Release server threads waiting on connection if the connection is dead.
 * Fixed bug where server closes HTTP connection on request error even if keep alive is set to true.
+* Deprecated driver `Channelizer` keep-alive related methods.
 * Java driver now delegates handling of WebSocket handshake to Netty instead of custom code.
 * Java driver now delegates sending keepAlive messages to Netty for `WebSocketChannelizer`.
 * Java driver now uses WebSocket compression extension ([RFC7692](https://tools.ietf.org/html/rfc7692)) for `WebSocketChannelizer`.
